// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/Layout/Header Connected 1`] = `
<header
  className="header fr-header "
  role="banner"
>
  <div
    className="fr-header__body"
  >
    <div
      className="fr-container"
    >
      <div
        className="fr-header__body-row header__row"
      >
        <div
          className="fr-header__brand fr-enlarge-link pointer-events-none lg:pointer-events-auto"
        >
          <div
            className="fr-header__brand-top !w-auto"
          >
            <div
              className="fr-header__logo"
            >
              <p
                className="fr-logo"
                title="république française"
              >
                république
                <br />
                française
              </p>
            </div>
          </div>
          <div
            className="fr-header__ademe shrink-0"
          >
            <img
              alt="logo ADEME"
              className="h-20"
              loading="lazy"
              src="ademe.jpg"
            />
          </div>
          <div
            className="fr-header__service"
          >
            <a
              href="/"
              title="Accueil"
            >
              <p
                className="fr-header__service-title pointer-events-auto"
              >
                Territoires en Transitions
              </p>
            </a>
            <p
              className="text-sm"
            >
              Accompagner la transition écologique des collectivités
            </p>
          </div>
        </div>
        <div
          className="fr-header__tools hidden lg:block"
        >
          <div
            className="fr-header__tools-links"
          >
            <ul
              className="fr-links-group"
            >
              <a
                className="fr-link"
                href="/toutes_collectivites"
                onClick={[Function]}
              >
                Collectivités engagées
              </a>
              <a
                className="fr-link"
                data-test="help"
                href="https://aide.territoiresentransitions.fr/fr/"
                rel="noreferrer"
                target="_blank"
              >
                <div
                  className="fr-fi-question-line mr-2"
                />
                Aide
              </a>
              <div
                data-test="connectedMenu"
              >
                <div
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                >
                  <button
                    className="fr-link"
                    style={
                      Object {
                        "maxWidth": "15rem",
                      }
                    }
                  >
                    <div
                      className="fr-fi-account-line mr-2"
                    />
                    <span
                      className="line-clamp-1"
                    >
                      Yolo
                    </span>
                    <div
                      className="fr-fi-arrow-down-s-line ml-2 scale-90"
                    />
                  </button>
                </div>
              </div>
            </ul>
          </div>
        </div>
        <button
          className="fr-fi-menu-fill absolute top-6 right-6 z-10 lg:hidden"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="fr-container hidden lg:block"
  >
    <div
      className="flex flex-row justify-between"
    >
      <nav
        aria-label="Menu principal"
        className="flex flex-row w-full text-sm"
      >
        <a
          aria-current={null}
          className="fr-nav__item justify-center text-center p-4"
          href="/collectivite/1/tableau_bord"
          onClick={[Function]}
        >
          Tableau de bord
        </a>
        <div
          className="flex"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
        >
          <button
            className="flex items-center p-4"
          >
            Climat Air Énergie
            <div
              className="ml-2 mt-1 fr-fi-arrow-down-s-line scale-75"
            />
          </button>
        </div>
        <div
          className="flex"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
        >
          <button
            className="flex items-center p-4"
          >
            Économie circulaire
            <div
              className="ml-2 mt-1 fr-fi-arrow-down-s-line scale-75"
            />
          </button>
        </div>
        <div
          className="flex"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
        >
          <button
            className="flex items-center p-4"
          >
            Pilotage
            <div
              className="ml-2 mt-1 fr-fi-arrow-down-s-line scale-75"
            />
          </button>
        </div>
        <div
          className="flex"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
        >
          <button
            className="flex items-center p-4"
          >
            Paramètres
            <div
              className="ml-2 mt-1 fr-fi-arrow-down-s-line scale-75"
            />
          </button>
        </div>
        <div
          className="flex ml-auto pl-2 w-full max-w-sm"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
        >
          <div
            className="w-full mt-auto mb-2 border border-gray-300"
          >
            <button
              className="flex items-center w-full py-2 pl-4 pr-3 font-bold"
            >
              <span
                className="mr-auto line-clamp-1"
              >
                Collectivité test
              </span>
              <div
                className="ml-4 px-2 py-0.5 font-bold text-xs uppercase rounded-md text-blue-600 bg-blue-200 text-blue-600 bg-blue-100"
              >
                admin
              </div>
              <div
                className="ml-2 fr-fi-arrow-down-s-line scale-75"
              />
            </button>
          </div>
        </div>
      </nav>
    </div>
  </div>
</header>
`;

exports[`Storyshots app/Layout/Header Not Connected 1`] = `
<header
  className="header fr-header "
  role="banner"
>
  <div
    className="fr-header__body"
  >
    <div
      className="fr-container"
    >
      <div
        className="fr-header__body-row header__row"
      >
        <div
          className="fr-header__brand fr-enlarge-link pointer-events-none lg:pointer-events-auto"
        >
          <div
            className="fr-header__brand-top !w-auto"
          >
            <div
              className="fr-header__logo"
            >
              <p
                className="fr-logo"
                title="république française"
              >
                république
                <br />
                française
              </p>
            </div>
          </div>
          <div
            className="fr-header__ademe shrink-0"
          >
            <img
              alt="logo ADEME"
              className="h-20"
              loading="lazy"
              src="ademe.jpg"
            />
          </div>
          <div
            className="fr-header__service"
          >
            <a
              href="/"
              title="Accueil"
            >
              <p
                className="fr-header__service-title pointer-events-auto"
              >
                Territoires en Transitions
              </p>
            </a>
            <p
              className="text-sm"
            >
              Accompagner la transition écologique des collectivités
            </p>
          </div>
        </div>
        <div
          className="fr-header__tools hidden lg:block"
        >
          <div
            className="fr-header__tools-links"
          >
            <ul
              className="fr-links-group"
            >
              <a
                className="fr-link"
                data-test="help"
                href="https://aide.territoiresentransitions.fr/fr/"
                rel="noreferrer"
                target="_blank"
              >
                <div
                  className="fr-fi-question-line mr-2"
                />
                Aide
              </a>
              <a
                className="fr-link"
                data-test="signup"
                href="/auth/signup"
                onClick={[Function]}
              >
                <div
                  className="fr-fi-add-line mr-2"
                />
                Créer un compte
              </a>
              <a
                className="fr-link"
                data-test="signin"
                href="/auth/signin"
                onClick={[Function]}
              >
                <div
                  className="fr-fi-account-line mr-2"
                />
                Se connecter
              </a>
            </ul>
          </div>
        </div>
        <button
          className="fr-fi-menu-fill absolute top-6 right-6 z-10 lg:hidden"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</header>
`;
